[package]
name = "batcher"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43", features = ["full"] }
tokio-stream = "0.1"
bytes = "1.9"
tonic = { version = "0.12", features = ["tls", "tls-roots"] }
anyhow = "1.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
base64 = "0.22"
reqwest = { version = "0.11", features = ["json"]}
# В 0.21 и 0.51 фичи rpc/grpc называются и работают иначе
cosmrs = { version = "0.21", features = ["grpc"] }
ibc-proto = { version = "0.51" } 
prost = "0.13"
prost-types = "0.13"
hex = "0.4"
bip32 = "0.5"
hdpath = "0.6"