[package]
name = "aero-parser_pack"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3.31"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
toml = "0.8.19"
chrono = "0.4.38"
anyhow = "1.0.89"
hex = "0.4.3" # Обязательно для декодирования IBC акков
base64 = "0.22.1"
# Логирование
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }

# Утилиты
once_cell = "1.20"