[package]
name = "aero-web"
version = "0.1.0"
edition = "2021"

[dependencies]
# Основной рантайм
tokio = { version = "1.37", features = ["full"] }

# Работа с HTTP/2 и типами данных
h2 = "0.4"
http = "1.1"
bytes = "1.6"
rand = "0.8.5"  # Или последняя версия, но 0.8 ок для thread_rng
# Конфиги и десериализация
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Оптимизация сборки для продакшена (добавь в конец файла)
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'